--- a/languages/default.lng
+++ b/languages/default.lng
@@ -1,9 +1,15 @@
+&About...=
 &Edit=
 &Help=
+&New=
+&Open...=
 &Quest=
 &Replace with:=
 &Search for:=
+&Status Bar=
 &View=
+Close All Fi&les=
+E&xit=
 Insert=
 Modified=
 Quest=
