Новый диалог сохр. изм. квеста. Локализация. Исправл. ошибки.

--- a/languages/default.lng
+++ b/languages/default.lng
@@ -1,18 +1,54 @@
 &About...=
+&Backward=
+&Cancel=
+&Close=
+&Copy=
 &Edit=
+&Find...=
+&Forward=
 &Help=
 &New=
+&No=
 &Open...=
+&Paste=
+&Print...=
 &Quest=
+&Recent Files=
+&Redo=
+&Regular expression=
 &Replace with:=
+&Replace...=
+&Save=
 &Search for:=
+&Selected text only=
 &Status Bar=
+&Undo=
 &View=
+&Whole words only=
+&Yes=
+=
+C&ase sensitivity=
+Cancel=
 Close All Fi&les=
+Confirm replace=
+Confirm=
+Cu&t=
+De&lete=
+Direction=
 E&xit=
+Find &Next=
+Find &Previous=
 Insert=
 Modified=
+OK=
+Options=
+Overwrite=
 Quest=
 Replace text=
+Replace this occurence of "%s"?=
+Save &As...=
+Search from &caret=
 Search Text=
+Select &All=
 The text in the "%s" file has changed. Do you want to save the modifications?=
+Yes to &all=
