Настройки. Выбор интерпретатора.

--- a/languages/default.lng
+++ b/languages/default.lng
@@ -47,8 +47,11 @@ Quest=
 Replace text=
 Replace this occurence of "%s"?=
 Save &As...=
+Se&ttings=
 Search from &caret=
 Search Text=
 Select &All=
+Settings=
 The text in the "%s" file has changed. Do you want to save the modifications?=
+URQ=
 Yes to &all=
