Настройки. Выбор интерпретатора.

--- a/languages/default.lng
+++ b/languages/default.lng
@@ -53,5 +53,6 @@ Search Text=
 Select &All=
 Settings=
 The text in the "%s" file has changed. Do you want to save the modifications?=
+URQ path:=
 URQ=
 Yes to &all=
