Настройки. Выбор интерпретатора.

--- a/languages/default.lng
+++ b/languages/default.lng
@@ -13,11 +13,11 @@
 &Paste=
 &Print...=
 &Quest=
-&Recent Files=
 &Redo=
 &Regular expression=
 &Replace with:=
 &Replace...=
+&Run=
 &Save=
 &Search for:=
 &Selected text only=
@@ -34,16 +34,20 @@ Confirm replace=
 Confirm=
 Cu&t=
 De&lete=
+Default=
 Direction=
 E&xit=
 Find &Next=
 Find &Previous=
 Insert=
+Interpretator URQ|*.exe=
 Modified=
 OK=
 Options=
 Overwrite=
 Quest=
+R&un=
+Recent &Files=
 Replace text=
 Replace this occurence of "%s"?=
 Save &As...=
